plot current results

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,11 @@ cmake-build-release/
 data/
 *~
 \#*
-*ipynb*
 competitors/rmi/*.h
 competitors/rmi/*.cpp
 results/*.txt
 results_perf/*.txt
 rmi_data/*
 rmi.tar.zst
+
+.ipynb_checkpoints/
