--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "competitors/analysis-rmi"]
 	path = competitors/analysis-rmi
 	url = https://github.com/alhuan/analysis-rmi.git
+[submodule "competitors/xindex"]
+	path = competitors/xindex
+	url = https://ipads.se.sjtu.edu.cn:1312/opensource/xindex.git
